--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://bnaiisraelcong.org/","creator":"http://perfmonkey.com","rand":0.6204679666909543,"created_at":"2014-07-29T18:15:25.020Z"}
